--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -41,8 +41,8 @@
 }
 
 body{
-	background-image: url('light_toast.png');
-	/*	background-image: url('escheresque_ste.png');	*/
+	/*background-image: url('gray_jean.png');*/
+	/*background-image: url('linedpaper.png');	*/
 }
 
 
