--- a/templates/home.html
+++ b/templates/home.html
@@ -11,37 +11,21 @@
 	<link rel="icon" type="image/png" href="images/drawing.png">
 	
 	<link href="stylesheets/bootstrap.css" rel="stylesheet">
-  <link href="stylesheets/bootstrap-responsive.css" rel="stylesheet">
+	<link href="stylesheets/bootstrap-responsive.css" rel="stylesheet">
 	<link  href="stylesheets/homepage.css" rel="stylesheet">
   
   <script type="text/javascript" src="js/myjs.js"></script>
-  <script type="text/javascript" src="js/jquery.js"></script>
-  <script type="text/javascript" src="js/bootstrap.js"></script>
+  <!--<script type="text/javascript" src="js/jquery.js"></script>-->
+  <!--<script type="text/javascript" src="js/bootstrap.js"></script>-->
   
 </head>
 
 <body>
     
   <div class="container" >
-
-    <hr>
-  	<div class="hero-unit" id="text">
-    </div>
-    <hr>
-     <div id = "extra"  ></div>
-    <!-- Modal -->
-    <div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Empty</h3>
-      </div>
-      <div class="modal-body">
-        <p>Nothing in here. Please check again later</p>
-      </div>
-      <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-      </div>
-    </div>
+	<hr>
+  	<div class="hero-unit" id="text"> </div>
+    <div id = "extra"  ></div>
 
     <div class="navbar">
       <div class="navbar-inner">
@@ -49,7 +33,7 @@
           <ul class="nav">
             <li id="home"><a href="javascript:void(0)" onclick="showHome();" >Home</a></li>
             <li id="rants"><a href="javascript:void(0);" onclick="showRants();" >Rants</a></li>
-            <li><a href="#myModal" data-toggle="modal">Projects</a></li>
+            <li><a href="#">Projects</a></li>
             <li id="about"><a href="javascript:void(0);" onclick="showAbout();">About</a></li>
           </ul>
         </div>
