simple site framework up

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,38 +8,45 @@
 	<meta name="author" content="Sourav Goswami"/>
 	<meta name="description" content="An undergraduate in computer science from Bengal Engineering and Science University
 					BESU, Shibpur.Likes breaking and making stuff.This is where he rants"/>
-	<link rel="icon" type="image/png" href="images/drawing.png">
 	
-	<link href="stylesheets/bootstrap.css" rel="stylesheet">
-	<link href="stylesheets/bootstrap-responsive.css" rel="stylesheet">
 	<link  href="stylesheets/homepage.css" rel="stylesheet">
-  
-  <script type="text/javascript" src="js/myjs.js"></script>
-  <!--<script type="text/javascript" src="js/jquery.js"></script>-->
-  <!--<script type="text/javascript" src="js/bootstrap.js"></script>-->
+	<link href='http://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
   
 </head>
 
 <body>
-    
-  <div class="container" >
-	<hr>
-  	<div class="hero-unit" id="text"> </div>
-    <div id = "extra"  ></div>
-
-    <div class="navbar">
-      <div class="navbar-inner">
-        <div class="container">
-          <ul class="nav">
-            <li id="home"><a href="javascript:void(0)" onclick="showHome();" >Home</a></li>
-            <li id="rants"><a href="javascript:void(0);" onclick="showRants();" >Rants</a></li>
-            <li><a href="#">Projects</a></li>
-            <li id="about"><a href="javascript:void(0);" onclick="showAbout();">About</a></li>
-          </ul>
-        </div>
-      </div>
-    </div><!-- /.navbar -->
-
+	<div class="container" >
+		<div class="top-links">
+			<ul>
+				<li class="active"><a href="/">Home</a></li>
+				<li><a href="/about">About</a></li>
+				<li><a href="/contact">Contact</a></li>
+				<li><a href="/blog">Blog</a></li>
+			</ul>
+		</div>
+		<div class="title">SOURAV GOSWAMI</div>
+		<div class="content-wrapper">
+			<div class="content" class="active">
+				<div class = "content-meta">
+					<span class ="content-title">
+						HOW TO WRITE A SITE
+					</span>
+					<span class = "content-date">
+						2 February 2013
+					</span>
+				</div>
+				<p class="content-post">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel dolor in lorem malesuada hendrerit sed sit amet quam. Nunc pretium, odio non ultricies congue, libero libero suscipit eros, cursus congue nulla mauris id ipsum. Pellentesque augue magna, sodales in accumsan a, consectetur vitae tortor. Donec ut iaculis nisi. Nullam nec neque aliquam dolor pellentesque scelerisque. Phasellus nec est arcu, quis ornare ligula. Vestibulum ante ipsum primis in faucibus orci
+					luctus et ultrices posuere cubilia Curae; Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam consectetur, turpis eget vulputate sollicitudin, nisi nibh cursus nisi, eget ornare nisi tortor vitae tellus. Duis molestie nunc varius urna accumsan in bibendum tellus pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla eu leo nec dolor luctus
+					volutpat. Donec quis libero et felis semper elementum at non tortor. 
+					<img src="http://placehold.it/480x480" class="middle">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel dolor in lorem malesuada hendrerit sed sit amet quam. Nunc pretium, odio non ultricies congue, libero libero suscipit eros, cursus congue nulla mauris id ipsum. Pellentesque augue magna, sodales in accumsan a, consectetur vitae tortor. Donec ut iaculis nisi. Nullam nec neque aliquam dolor pellentesque scelerisque. Phasellus nec est arcu, quis ornare ligula. Vestibulum ante ipsum primis in faucibus orci
+					luctus et ultrices posuere cubilia Curae; Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam consectetur, turpis eget vulputate sollicitudin, nisi nibh cursus nisi, eget ornare nisi tortor vitae tellus. Duis molestie nunc varius urna accumsan in bibendum tellus pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla eu leo nec dolor luctus
+					volutpat. Donec quis libero et felis semper elementum at non tortor. 
+				</p>
+			</div>
+		</div>
 	</div>
 
 </body>
