--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -1,63 +1,173 @@
-.title{
-  margin-top:40px;
-  font-size: 5em;  
-  text-align: center;
-}
-
-
-/* Customize the navbar links to be fill the entire space of the .navbar */
-.navbar{
-   position:absolute;
-   bottom:0;
-
-   
-}
-.navbar .navbar-inner {
-  padding: 0;
-}
-.navbar .nav {
-  margin: 0;
-  display: table;
-  width: 100%;
-}
-.navbar .nav li {
-  display: table-cell;
-  width: 1%;
-  float: none;
-}
-.navbar .nav li a {
-  font-weight: bold;
-  text-align: center;
-  border-left: 1px solid rgba(255,255,255,.75);
-  border-right: 1px solid rgba(0,0,0,.1);
-}
-.navbar .nav li:first-child a {
-  border-left: 0;
-  border-radius: 3px 0 0 3px;
-}
-.navbar .nav li:last-child a {
-  border-right: 0;
-  border-radius: 0 3px 3px 0;
-}
 
 body{
-	/*background-image: url('gray_jean.png');*/
-	/*background-image: url('linedpaper.png');	*/
+	color:#333333;
 }
 
-
-.hero-unit{
-/*	background-image: url('escheresque_ste.png');	*/
-	overflow: hidden;
-}
-
-/* Custom container */
 .container {
-  margin: 0 auto;
-	max-width: 800px;
+	margin: 0 auto;
+	max-width: 58%;
+	height:100%;
 }
-.container > hr {
-	margin: 15px 0;
+
+.title{
+  margin-top:1%;
+  font-size: 6em;  
+  text-align: center;
+  font-family: 'Love Ya Like A Sister',sans-serif;
+  color:#D24949;
 }
 
 
+.top-links > ul >li {
+	font-family: 'Love Ya Like A Sister',sans-serif;
+	display:inline;
+	padding: 2%;
+}
+
+li>a{
+	text-decoration:none;
+	color:#333333;
+}
+
+li>a:hover{
+	color:#D24949;
+	/*font-weight:bold;*/
+}
+
+.active > a {
+	color:#D24949;
+}
+
+
+
+.content-wrapper{
+	margin: 10%;
+}
+
+.content{
+	margin-top:10%;
+}
+.content-post > span > a {
+	text-decoration: none;
+	padding:1%;
+}
+
+.content-title {
+  	color:#D24949;
+	font-family: 'Love Ya Like A Sister',sans-serif;
+	font-size: 1.5em;
+}
+.content-date{
+	font-family: 'Love Ya Like A Sister', sans-serif;
+	font-size: 1em;
+	margin-left:2%;
+}
+p {
+	width:96%;
+	font-family:'PT Serif', sans-serif; 
+	font-size:16px;
+	line-height: 23px;
+	font-weight: 400;
+	color: #4D4D4D;
+}
+
+p > img{
+	margin-top: 5%;
+	margin-bottom: 5%;
+	padding: 4px;
+  	background-color: #fff;
+  	border: 1px solid #ccc;
+  	border: 1px solid rgba(0, 0, 0, 0.2);
+  	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+img.middle { 
+	display: block; 
+	margin-left: auto; 
+	margin-right: auto; 
+}
+
+img.left { 
+	display: block; 
+	margin-right: auto; 
+}
+
+img.right { 
+	display: block; 
+	margin-left: auto; 
+}
+
+.img-circle {
+  -webkit-border-radius: 500px;
+     -moz-border-radius: 500px;
+          border-radius: 500px;
+}
+
+table { 
+	border-collapse: collapse;
+	margin-top:20px;
+
+}
+
+td {
+	vertical-align: top;
+}
+
+td >img{
+	margin-top:10px;	
+	margin-left:-10px;
+}
+
+td > p {
+	margin-left: 10%;
+	width:80%;
+}
+
+.contact > table{
+	width:100%;
+}
+
+.formbox{
+	padding: 15px 20px;
+	background-color: rgb(240, 240, 240); 
+	-webkit-border-radius: 5px;
+     -moz-border-radius: 5px;
+          border-radius: 5px;
+}
+
+form > label {
+	font-family:'Love Ya Like A Sister', sans-serif; 
+	font-size:1em;
+	color: #D24949;
+}
+
+input{
+	color: #4D4D4D;
+	font-family:'PT Serif', sans-serif; 
+	font-size:14px;
+	border: 0px solid transparent;
+	margin-top:4px;
+	margin-bottom:4px;
+}
+
+input:focus {
+	color: #333333;
+	border: 3px solid #D24949;
+}
+
+textarea{
+	color: #4D4D4D;
+	font-family:'PT Serif', sans-serif; 
+	font-size:14px;
+	line-height: 23px;
+	border: 0px solid transparent;
+	margin-top:4px;
+	margin-bottom:4px;
+}
+
+textarea:focus {
+	color: #333333;
+	border: 3px solid #D24949;
+}
