--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Sourav Goswami (gosour)</title>
+	<title>Sourav Goswami</title>
 	<meta name="viewport" content = "width=device-width, intial-scale=1.0">
 	<meta name="author" content="Sourav Goswami"/>
 	<meta name="description" content="An undergraduate in computer science from Bengal Engineering and Science University
