--- a/templates/blog.html
+++ b/templates/blog.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Sourav Goswami (gosour)</title>
+	<title>Sourav Goswami</title>
 	<meta name="viewport" content = "width=device-width, intial-scale=1.0">
 	<meta name="author" content="Sourav Goswami"/>
 	<meta name="description" content="An undergraduate in computer science from Bengal Engineering and Science University
@@ -27,72 +27,23 @@
 		</div>
 		<div class="title">SOURAV GOSWAMI</div>
 		<div class="content-wrapper">
+			{% for blog in blogs %}
+			
 			<div class="content" class="active">
 				<div class = "content-meta">
 					<span class ="content-title">
-						HOW TO WRITE A SITE
+			            	<a href="/blog/{{blog.key().id()}}">
+			            		{{blog.subject}}
+			            	</a>
 					</span>
 					<span class = "content-date">
-						2 February 2013
+						{{blog.created}}
 					</span>
 				</div>
-				<p class="content-post">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel dolor in lorem malesuada hendrerit sed sit amet quam. Nunc pretium, odio non ultricies congue, libero libero suscipit eros, cursus congue nulla mauris id ipsum. Pellentesque augue magna, sodales in accumsan a, consectetur vitae tortor. Donec ut iaculis nisi. Nullam nec neque aliquam dolor pellentesque scelerisque. Phasellus nec est arcu, quis ornare ligula. Vestibulum ante ipsum primis in faucibus orci
-					luctus et ultrices posuere cubilia Curae; Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam consectetur, turpis eget vulputate sollicitudin, nisi nibh cursus nisi, eget ornare nisi tortor vitae tellus. Duis molestie nunc varius urna accumsan in bibendum tellus pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla eu leo nec dolor luctus
-					volutpat. Donec quis libero et felis semper elementum at non tortor. 
-					<img src="http://placehold.it/480x480" class="middle">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel dolor in lorem malesuada hendrerit sed sit amet quam. Nunc pretium, odio non ultricies congue, libero libero suscipit eros, cursus congue nulla mauris id ipsum. Pellentesque augue magna, sodales in accumsan a, consectetur vitae tortor. Donec ut iaculis nisi. Nullam nec neque aliquam dolor pellentesque scelerisque. Phasellus nec est arcu, quis ornare ligula. Vestibulum ante ipsum primis in faucibus orci
-					luctus et ultrices posuere cubilia Curae; Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam consectetur, turpis eget vulputate sollicitudin, nisi nibh cursus nisi, eget ornare nisi tortor vitae tellus. Duis molestie nunc varius urna accumsan in bibendum tellus pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla eu leo nec dolor luctus
-					volutpat. Donec quis libero et felis semper elementum at non tortor. 
-				</p>
-			</div>
-			<div class="content" class="active">
-				<div class = "content-meta">
-					<span class ="content-title">
-						HOW TO WRITE A SITE
-					</span>
-					<span class = "content-date">
-						2 February 2013
-					</span>
-				</div>
-				<p class="content-post">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel dolor in lorem malesuada hendrerit sed sit amet quam. Nunc pretium, odio non ultricies congue, libero libero suscipit eros, cursus congue nulla mauris id ipsum. Pellentesque augue magna, sodales in accumsan a, consectetur vitae tortor. Donec ut iaculis nisi. Nullam nec neque aliquam dolor pellentesque scelerisque. Phasellus nec est arcu, quis ornare ligula. Vestibulum ante ipsum primis in faucibus orci
-					luctus et ultrices posuere cubilia Curae; Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam consectetur, turpis eget vulputate sollicitudin, nisi nibh cursus nisi, eget ornare nisi tortor vitae tellus. Duis molestie nunc varius urna accumsan in bibendum tellus pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla eu leo nec dolor luctus
-					volutpat. Donec quis libero et felis semper elementum at non tortor. 
-				</p>
-			</div>
-			<div class="content" class="active">
-				<div class = "content-meta">
-					<span class ="content-title">
-						HOW TO WRITE A SITE
-					</span>
-					<span class = "content-date">
-						2 February 2013
-					</span>
-				</div>
-				<p class="content-post">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel dolor in lorem malesuada hendrerit sed sit amet quam. Nunc pretium, odio non ultricies congue, libero libero suscipit eros, cursus congue nulla mauris id ipsum. Pellentesque augue magna, sodales in accumsan a, consectetur vitae tortor. Donec ut iaculis nisi. Nullam nec neque aliquam dolor pellentesque scelerisque. Phasellus nec est arcu, quis ornare ligula. Vestibulum ante ipsum primis in faucibus orci
-					luctus et ultrices posuere cubilia Curae; Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam consectetur, turpis eget vulputate sollicitudin, nisi nibh cursus nisi, eget ornare nisi tortor vitae tellus. Duis molestie nunc varius urna accumsan in bibendum tellus pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla eu leo nec dolor luctus
-					volutpat. Donec quis libero et felis semper elementum at non tortor. 
-				</p>
-			</div>
-			<div class="content" class="active">
-				<div class = "content-meta">
-					<span class ="content-title">
-						HOW TO WRITE A SITE
-					</span>
-					<span class = "content-date">
-						2 February 2013
-					</span>
-				</div>
-				<p class="content-post">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel dolor in lorem malesuada hendrerit sed sit amet quam. Nunc pretium, odio non ultricies congue, libero libero suscipit eros, cursus congue nulla mauris id ipsum. Pellentesque augue magna, sodales in accumsan a, consectetur vitae tortor. Donec ut iaculis nisi. Nullam nec neque aliquam dolor pellentesque scelerisque. Phasellus nec est arcu, quis ornare ligula. Vestibulum ante ipsum primis in faucibus orci
-					luctus et ultrices posuere cubilia Curae; Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam consectetur, turpis eget vulputate sollicitudin, nisi nibh cursus nisi, eget ornare nisi tortor vitae tellus. Duis molestie nunc varius urna accumsan in bibendum tellus pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla eu leo nec dolor luctus
-					volutpat. Donec quis libero et felis semper elementum at non tortor. 
-				</p>
 			</div>
 
-		</div>
+			{% endfor %}
+		</div><!--end of content-wrapper-->
 	</div>
 
 </body>
