--- a/templates/about.html
+++ b/templates/about.html
@@ -10,43 +10,52 @@
 					BESU, Shibpur.Likes breaking and making stuff.This is where he rants"/>
 
 	<link href="stylesheets/homepage.css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
   
 </head>
 
 <body>
 	<div class="container" >
-		<div class="top-links">
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li class="active"><a href="/about">About</a></li>
-				<li><a href="/contact">Contact</a></li>
-				<li><a href="/blog">Blog</a></li>
-			</ul>
-		</div>
+		<section id="etc">
+			<div class="cover-body">
+				<div class="cover-body-inner">
+					<h1 id="myname">Sourav<br>Goswami</h1>
+					<ul id="nav_secondary" class="clearfix">
+						<li><a class= "buttonize" href="/">Home</a></li>
+						<li class="active"><a class= "buttonize" href="/about">About</a></li>
+						<li><a href="/contact" class= "buttonize">Contact</a></li>
+						<li><a href="/blog" class= "buttonize">Writings</a></li>
+					</ul>
+				</div>
+			</div>
+		</section>
 		
-		<div class="title">SOURAV GOSWAMI</div>
-
+		<section class="wrapper">
 		<div class="content-wrapper">
 			<div class="content-meta">
 				<span class ="content-title">
-					ABOUT
+					
 				</span>
-			<table>
-				<tr>
-					<td>
-					<img src="/images/me.jpg" class="img-circle about">
-					</td>
-					<td>
-					<p>	
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel dolor in lorem malesuada hendrerit sed sit amet quam. Nunc pretium, odio non ultricies congue, libero libero suscipit eros, cursus congue nulla mauris id ipsum. Pellentesque augue magna, sodales in accumsan a, consectetur vitae tortor. Donec ut iaculis nisi. Nullam nec neque aliquam dolor pellentesque scelerisque. Phasellus nec est arcu, quis ornare ligula. Vestibulum ante ipsum primis in faucibus orci
-					</p>
-					</td>
-				</tr>
-			</table>
-		</div> <!--content wrapper ends here!-->
-
+			</div>
+			<div class="content-post contact">
+				<table>
+					<tr>
+						<td>
+						<img src="/images/me.jpg" class="img-circle about">
+						</td>
+						<td>
+						<p>	
+							Just another computer Science undergraduate. <br>
+							Currently studying in BESU, Shibpur, India.<br>
+							Send me a comment. Let me know what you like and/or what you don't. I probably won't change anything based on what you say, but complaining is a cathartic experience. 
+						</p>
+						</td>
+					</tr>
+				</table>
+        	
+		</div>
+	</section>
 	</div>
 
 </body>
