--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,54 +10,59 @@
 					BESU, Shibpur.Likes breaking and making stuff.This is where he rants"/>
 
 	<link href="stylesheets/homepage.css" rel="stylesheet">
-	<link href='http://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
   
 </head>
 
 <body>
 	<div class="container" >
-		<div class="top-links">
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/about">About</a></li>
-				<li class="active"><a href="/contact">Contact</a></li>
-				<li><a href="/blog">Blog</a></li>
-			</ul>
-		</div>
+		<section id="etc">
+			<div class="cover-body">
+				<div class="cover-body-inner">
+					<h1 id="myname">Sourav<br>Goswami</h1>
+					<ul id="nav_secondary" class="clearfix">
+						<li><a class= "buttonize" href="/">Home</a></li>
+						<li><a class= "buttonize" href="/about">About</a></li>
+						<li class="active"><a href="/contact" class= "buttonize">Contact</a></li>
+						<li><a href="/blog" class= "buttonize">Writings</a></li>
+					</ul>
+				</div>
+			</div>
+		</section>
 		
-		<div class="title">SOURAV GOSWAMI</div>
-
+		<section class="wrapper">
 		<div class="content-wrapper">
 			<div class="content-meta">
 				<span class ="content-title">
-					CONTACT
+					
 				</span>
 			</div>
 			<div class="content-post contact">
+				<table>
+					<tr>
+						<td>
+						<img src="/images/me.jpg" class="img-circle about">
+						</td>
+						<td>
+						<p>	
+							Just another computer Science undergraduate. <br>
+							Currently studying in BESU, Shibpur, India.<br>
+							Send me a comment. Let me know what you like and/or what you don't. I probably won't change anything based on what you say, but complaining is a cathartic experience. 
+						</p>
+						</td>
+					</tr>
+				</table>
 				<p>
-					Send me a comment. Let me know what you like and/or what you don't. I probably won't change anything based on what you say, but complaining is a cathartic experience. Look forward to hearing from you.
+					
 				</p>
-				<div class="formbox">	
-					<form>
-						<label> Your Name <br>
-							<input type="text" name="sender_name">
-						</label><br>
-						<label> Your email <br>
-							<input type="text" name="sender_email">
-						</label><br>
-						<label>	Your Subject <br>
-							<input type="text" name="sender_subject">
-						</label><br>
-						<label> Your Message<br>
-							<textarea name="sender_message" style="height: 100px; width: 400px;">
-							</textarea>
-						</label>
-					</form>
-				</div>
+<!-- 				<hr> -->
+				<p>
+					Fire a mail to sourav@souravgoswami.com, or find me in one of these places
+				</p>
 				<br>
 				<span class ="content-title">
-					SOCIAL:
+					
 				</span>
 				<table>
 					<tr align="center">
@@ -81,6 +86,7 @@
 			</div>
         	
 		</div>
+	</section>
 	</div>
 
 </body>
