--- a/templates/about.html
+++ b/templates/about.html
@@ -11,24 +11,16 @@
 
 	<link href="stylesheets/homepage.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400' rel='stylesheet' type='text/css'>
   
 </head>
 
 <body>
 	<div class="container" >
-		<section id="etc">
-			<div class="cover-body">
-				<div class="cover-body-inner">
-					<h1 id="myname">Sourav<br>Goswami</h1>
-					<ul id="nav_secondary" class="clearfix">
-						<li><a class= "buttonize" href="/">Home</a></li>
-						<li class="active"><a class= "buttonize" href="/about">About</a></li>
-						<li><a href="/contact" class= "buttonize">Contact</a></li>
-						<li><a href="/blog" class= "buttonize">Writings</a></li>
-					</ul>
+		<section id="bar">
+				<div id="bar-content">
+					<h1 id="myname"><a href = "/">Sourav</a><br><a href = "/">Goswami</a></h1>
 				</div>
-			</div>
 		</section>
 		
 		<section class="wrapper">
