--- a/templates/blog.html
+++ b/templates/blog.html
@@ -11,25 +11,19 @@
 	
 	<link  href="stylesheets/homepage.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400' rel='stylesheet' type='text/css'>
   
 </head>
 
 <body>
 	<div class="container" >
-		<section id="etc">
-			<div class="cover-body">
-				<div class="cover-body-inner">
-					<h1 id="myname">Sourav<br>Goswami</h1>
-					<ul id="nav_secondary" class="clearfix">
-						<li ><a class= "buttonize" href="/">Home</a></li>
-						<li><a class= "buttonize" href="/">About</a></li>
-						<li><a href="/contact" class= "buttonize">Contact</a></li>
-						<li class="active"><a href="/blog" class= "buttonize">Writings</a></li>
-					</ul>
+		
+		<section id="bar">
+				<div id="bar-content">
+					<h1 id="myname"><a href = "/">Sourav</a><br><a href = "/">Goswami</a></h1>
 				</div>
-			</div>
 		</section>
+		
 		<section class="wrapper">
 		<div class="content-wrapper">
 			{% for blog in blogs %}
@@ -37,7 +31,7 @@
 			<div class="content" class="active">
 				<div class = "content-meta">
 					<span class ="content-title">
-			            	<a href="/blog/{{blog.key().id()}}">
+			            	<a href="/essay/{{blog.key().id()}}">
 			            		{{blog.subject}}
 			            	</a>
 					</span>
